@@ -1120,7 +1120,7 @@ NS_EXTERN void Ns_SetPrint(Ns_Set *set);
 NS_EXTERN SOCKET Ns_SockListenEx(char *address, int port, int backlog);
 NS_EXTERN SOCKET Ns_SockListenUdp(char *address, int port);
 NS_EXTERN SOCKET Ns_SockListenRaw(int proto);
-NS_EXTERN SOCKET Ns_SockListenUnix(char *path);
+NS_EXTERN SOCKET Ns_SockListenUnix(char *path, int backlog);
 
 NS_EXTERN SOCKET Ns_SockBindUdp(struct sockaddr_in *saPtr);
 NS_EXTERN SOCKET Ns_SockBindRaw(int proto);
